# convolutional

./: .gitignore  BlasConfig.cmake  CMakeLists.txt  LICENSE  README.md  benchmarks.csv  build.cmd  build.sh  tiny.csv
CMake/: OpenBLASSetup.cmake
include/: BlasHelpers.h  CSVParser.h  ConvProperties.h  ConvolutionProperties.h  ForLoopConvolution.h  Matrix.h  PaddedConvolution.h  PartiallyUnrolledConvolution.h  PartiallyUnrolledInputExplicitOutPaddingConv.h  PartiallyUnrolledInputExplicitOutPaddingConvolution.h  PartiallyUnrolledInputExplicitPaddingConv.h  PartiallyUnrolledInputExplicitPaddingConvolution.h  PartiallyUnrolledInputImplicitInPaddingConv.h  PartiallyUnrolledInputImplicitInPaddingConvolution.h  Tensor.h  TestHelpers.h  UnrolledConvolution.h  UnrolledInputChlMajInputConv.h  UnrolledInputChlMajInputConvolution.h  UnrolledInputConv_CI.h  UnrolledInputConv_RI.h  UnrolledInputConv_cI.h  UnrolledInputConv_rI.h  UnrolledInputConvolution.h  UnrolledInputExplicitOutPaddingConv.h  UnrolledInputExplicitOutPaddingConvolution.h  UnrolledInputExplicitPaddingConv.h  UnrolledInputExplicitPaddingConvolution.h  UnrolledInputImplicitInPaddingConv.h  UnrolledInputImplicitInPaddingConvolution.h  UnrolledOutputConv.h  UnrolledOutputConvolution.h  VirtuallyUnrolledInputExplicitOutPaddingConv.h  VirtuallyUnrolledInputExplicitPaddingConv.h  VirtuallyUnrolledInputImplicitInPaddingConv.h
results/: 201810.XeonE52630.32cores.gcc550.OpenBlas218.csv  201810.XeonE52630.32vcores.vs2017.OpenBlas219.csv  201810.XeonE52630.32vcores.vs2017.OpenBlas330.csv  201810.XeonE52673.16vcores.vs2017.MKL.csv  201810.XeonE52673.16vcores.vs2017.OpenBlas219.csv  201810.XeonE52673.16vcores.vs2017.OpenBlas330.csv  20181025.XeonE52630.2400Mhz.vs2017.reference.csv  20181025.XeonE52630.32x2400Mhz.vs2017.MKL.csv  20181025.XeonE52630.32x2400Mhz.vs2017.OpenBlas219.csv  20181025.XeonE52630.32x2400Mhz.vs2017.OpenBlas330.csv  20181028.4xXeonE52673v3.2400Mhz.vs2017.MKL.csv  20181028.4xXeonE52673v3.2400Mhz.vs2017.OpenBlas330.csv  201810_CortexA53_4cores_raspbian_gcc630_OpenBlas340.csv  201810_CortexA53_4cores_raspian_gcc630_OpenBlas340.csv  201810_XeonE52630_32cores_wslUbuntu_gcc550_OpenBlas218.csv  201810_XeonE52630_32vcores_win10_vs2017_MKL.csv  201810_XeonE52630_32vcores_win10_vs2017_OpenBlas219.csv  201810_XeonE52630_32vcores_win10_vs2017_OpenBlas330.csv  201810_XeonE52630_32vcores_win10_vs2017_reference.csv  201810_XeonE52673_16vcores_win10_vs2017_MKL.csv  201810_XeonE52673_16vcores_win10_vs2017_OpenBlas219.csv  201810_XeonE52673_16vcores_win10_vs2017_OpenBlas330.csv  201810_XeonE52673_16vcores_win10_vs2017_reference.csv  201811_CortexA53_4cores_raspbian_gcc630_OpenBlas340.csv  201811_CortexA53_4cores_raspian_gcc630_OpenBlas340.csv  201811_XeonE52673_16vcores_win10_vs2017_MKL.csv  201811_XeonE52673_16vcores_win10_vs2017_OpenBlas330.csv  201812_ARM11_1core_raspbian_gcc630_OpenBlas340.csv  201902_CortexA53_1core_raspbian_gcc630_OpenBlas340.csv  201902_CortexA53_4core_raspbian_gcc630_OpenBlas340OMP.csv
results/old/: Bad.20181028.XeonE52673v3.2400Mhz.vs2017.OpenBlas219.csv
src/: BlasHelpers.cpp  Debug.cpp  Main.cpp  Matrix.cpp  TestHelpers.cpp
